# fruitcards

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  alchemy.run.ts  drizzle.config.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vitest.config.ts
.alchemy/local/: wrangler.jsonc
.alchemy/pids/: fruitcards-aylwardm.pid.json  fruitcards-frtui-aylwardm.pid.json  fruitcards-fruitcards-aylwardm.pid.json  fruitcards-website-aylwardm.pid.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: autofix.yml
app/: app.config.ts  app.vue  types.ts
app/Apps/: Calendar.vue
app/components/: DiscountBanner.vue  HoldingForm.vue  NotificationsSlideOver.vue  PwaInstallPrompt.vue  TeamsMenu.vue  TransactionForm.vue  UserMenu.vue
app/components/Apps/: Schedule.vue
app/components/Calendar/: Calendar.vue  CalendarGrid.vue  CalendarHeader.vue  CalendarTimePicker.vue  CalendarWeekDays.vue  Dropdown.vue  SwimLane.vue  config.ts  types.ts
app/components/Cards/: AreaCharts.vue  Stats.vue
app/components/Charts/: ErrorType.vue  ExpensesBar.vue  FinanceSummary.vue  IssueBurnUp.vue  IssueTypeBar.vue  IssuesBar.vue  RequestsChart.vue  RevenueLine.vue  UserType.vue  WinLostBar.vue  WinLostDonut.vue  WinLostLine.vue
app/components/Filters/: Dropdowns.vue  Status.vue
app/components/Flex/: Between.vue  Center.vue  Col.vue  End.vue  Inline.vue  index.vue
app/components/Issues/: Item.vue
app/components/Status/: CategoryList.vue
app/components/Tables/: Sprint.vue  Traffic.vue  Transactions.vue  Users.vue
app/components/Widget/: Contacts.vue  Tasks.vue  Upload.vue
app/composables/: useAuth.ts  useBudget.ts  useCalendar.ts  useCalendarEvents.ts  useDashboard.ts  useFinancialTransactions.ts  useGym.ts  useHorizontalDragScroll.ts  useIssues.ts  useIssuesWithFilters.ts  usePlanning.ts  usePortfolio.ts  useResource.ts  useResponsiveHeight.ts  useTableQuery.ts  useUsers.ts
app/data/: budget.ts  events.ts  financial-transactions.ts  gym.ts  issues.ts  planning.ts  portfolio.ts  transactions.ts  users.ts
app/layouts/: default.vue
app/lib/: auth-client.ts
app/pages/: design.vue  index.vue  login.vue
app/pages/apps/: budget.vue  calendar.vue  charts.vue  gym.vue  planning.vue  portfolio.vue  timeline.vue  transactions.vue  widgets.vue
app/pages/dashboards/: Uptime.vue  data.vue  finance.vue  one.vue  traffic.vue  two.vue
app/pages/settings/: api-keys.vue  billing.vue  index.vue  notifications.vue
app/pages/users/: index.vue  profile.vue
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/model/: todo.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: errors.rs  lib.rs  pdf.rs
crates/services/ai-buddy/: Cargo.toml
crates/services/ai-buddy/src/: error.rs  event.rs  lib.rs
crates/services/ai-buddy/src/ais/: asst.rs  embeddings.rs  event.rs  mod.rs  msg.rs  openai.rs
crates/services/ai-buddy/src/buddy/: event.rs  mod.rs
crates/services/ai-buddy/src/utils/: files.rs  qdrant.rs
crates/services/ai-scribe/: Cargo.toml
crates/services/ai-scribe/src/: error.rs  errors.rs  event.rs  lib.rs  openai.rs
crates/services/ai-scribe/src/ais/: asst.rs  event.rs  mod.rs  openai.rs  types.rs
crates/services/ai-scribe/src/scribe/: event.rs  mod.rs
crates/services/ai-scribe/src/utils/: files.rs  mod.rs  qdrant.rs
crates/services/vector/: Cargo.toml
crates/services/vector/src/: lib.rs  openai.rs  vector.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/migrations/: 1_schema.sql
crates/services/web-server/src/: main.rs
crates/services/web-server/src/routes/: mod.rs  route_file.rs  route_todo.rs
migrations/: 0000_nostalgic_the_professor.sql
migrations/meta/: 0000_snapshot.json  _journal.json
scripts/: generate-pwa-icons.js
server/api/: notifications.get.ts
server/api/auth/: [...all].ts
server/api/budget/: summary.get.ts
server/api/charts/: errors.get.ts  requests.get.ts  users.get.ts
server/api/financial-transactions/: [id].delete.ts  [id].put.ts  categories.get.ts  index.get.ts  index.post.ts  summary.get.ts
server/api/gym/: summary.get.ts
server/api/issues/: index.get.ts
server/api/planning/: summary.get.ts
server/api/portfolio/: [id].delete.ts  [id].put.ts  index.get.ts  index.post.ts  summary.get.ts
server/api/users/: index.get.ts
server/api/utils/: TableQuery.ts
server/db/: index.ts
server/db/schema/: auth.ts  crm.ts  events.ts  index.ts  learnings.ts  transactions.ts
server/lib/: auth.ts
server/utils/: auth.ts
test/nuxt/: AppLogo.test.ts  TemplateMenu.test.ts  app.test.ts
test/nuxt/pages/: index.test.ts  login.test.ts
test/unit/: utils.test.ts
test/utils/: index.ts  matchers.ts
tests/: accessibility.spec.ts  auth.spec.ts  home.spec.ts  navigation.spec.ts
types/: env.d.ts
