[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    # -- Application Libraries
    # -- "crates/libs/lib-auth", # e.g., for pwd, token.
    "crates/libs/lib-utils", # e.g., base64, time.
    # -- "crates/libs/lib-file", # e.g., file, dir, S3.
    "crates/libs/lib-core", # e.g., model, ctx, config, pwd, token.

    # -- Application Services
    "crates/services/web-server"
]


[workspace.dependencies]


# -- AI
orca = { git = "https://github.com/scrippt-tech/orca" }
# -- Shuttle.
anyhow = "1.0.75"
tokio = "1.34.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.40"

axum = {version = "0.7.1", features = ["multipart"]}

# Data
serde_json = "1.0.96"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }

# -- Shuttle.
shuttle-shared-db = { version = "0.34.1", features = ["postgres"] }
shuttle-axum = { version = "0.34.1", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.34.1"
shuttle-secrets = "0.34.1"