[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    # -- Application Libraries
    # -- "crates/libs/lib-auth", # e.g., for pwd, token.
    "crates/libs/lib-utils", # e.g., base64, time.
    # -- "crates/libs/lib-file", # e.g., file, dir, S3.
    "crates/libs/lib-core", # e.g., model, ctx, config, pwd, token.

    # -- Application Services
    "crates/services/web-server"
]


[workspace.dependencies]


# -- AI
orca = { git = "https://github.com/scrippt-tech/orca" }
# -- Shuttle.
anyhow = "1.0.75"
tokio = "1.34.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.40"
axum = {version = "0.7.4", features = ["multipart"]}

# Extraction
lopdf = {version = "0.30", default-features = false, features = ["nom_parser"]}
pdf-extract = { version = "0.7.4"}
text-splitter = { version = "0.6.3"}

# Data
serde_json = "1.0.96"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }

# -- Shuttle.
shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"