[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
base64 = "0.21"
serde_json = "1"
time = {version = "0.3", features = ["formatting", "parsing", "serde"]}
orca = {workspace = true }
pdf = { git = "https://github.com/pdf-rs/pdf" }