[package]
name = "ai-buddy"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[lints] 
workspace = true


[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-core = { path = "../../libs/lib-core"}

anyhow = {workspace = true}

# -- AI
async-openai = "0.18"
qdrant-client = { workspace = true }

# -- Cli
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"

# -- D/Serialize
serde = {workspace = true}
serde_json = {workspace = true}

# -- Files
simple-fs = { version = "0.1.2", features = ["with-json", "with-toml"] }

# Extraction
lopdf = {version = "0.30", default-features = false, features = ["nom_parser"]}
pdf-extract = { version = "0.7.4"}
text-splitter = { version = "0.6.3"}

# -- Others
derive_more = {version = "1.0.0-beta", features = ["from", "display", "deref"] }


shuttle-secrets = {workspace = true}
tokio = {workspace = true}