[package]
name = "vector"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-core = { path = "../../libs/lib-core"}




anyhow = {workspace = true}
orca = {workspace = true}
async-openai = "0.17.1"
qdrant-client = "1.6.0"

shuttle-secrets = {workspace = true}
axum = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}