[package]
name = "vector"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-core = { path = "../../libs/lib-core"}


anyhow = {workspace = true}
orca = {workspace = true}
async-openai = { workspace = true}
qdrant-client = {workspace = true}
lopdf = { workspace = true}
pdf-extract = { workspace = true}
text-splitter = {workspace = true}


shuttle-secrets = {workspace = true}
axum = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}