[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
# -- App Libs
lib-utils = { path = "../../libs/lib-utils"}
lib-core = { path = "../../libs/lib-core"}
ai-buddy = { path = "../../services/ai-buddy"}


tempfile = "3.2.0"
serde = { version = "1.0.148", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "postgres"] }
futures = "0.3"

anyhow = {workspace = true}
tokio = {workspace = true}
tokio-util =  {workspace = true}
tracing = {workspace = true}
axum = {workspace = true} 
qdrant-client  = {workspace = true}
shuttle-shared-db = {workspace = true, features = ["postgres"]}
shuttle-axum = { workspace = true }
shuttle-runtime = {workspace = true} 
shuttle-qdrant = {workspace = true}

